--- a/src/app/modules/chess-board/chess-board.component.html
+++ b/src/app/modules/chess-board/chess-board.component.html
@@ -3,6 +3,7 @@
         <div *ngFor="let piece of row;let y =index" class="square"
             [ngClass]="{'dark': isSquareDark(x,y), 'light':isSquareDark(x,y)}">
             
+            <img *ngIf="piece" [src]="pieceImagePaths[piece]" alt="piece" class="piece">
         </div>
     </div>
 </div>
