--- a/src/app/modules/chess-board/chess-board.component.html
+++ b/src/app/modules/chess-board/chess-board.component.html
@@ -1,7 +1,7 @@
 <div class="chess-board">
     <div *ngFor="let row of chessBoardView; let x= index" class="row">
         <div *ngFor="let piece of row;let y =index" class="square"
-            [ngClass]="{'dark': isSquareDark(x,y), 'light':isSquareDark(x,y), 'selected-square': isSqaureSelected(x,y) }"
+            [ngClass]="{'dark': isSquareDark(x,y), 'light':isSquareDark(x,y), 'selected-square': isSqaureSelected(x,y),'last-move': isSquareLastMove(x,y),'king-in-check':isSqaureChecked(x,y) }"
             (click)="move(x,y)">
 
             <div [ngClass]="{'safe-square': isSqaureSafeForSelectedPiece(x,y)}"></div>
